# ESP32

./: .gitignore
ESP32_PROJECTS/BasicOTA/: BasicOTA.ino
ESP32_PROJECTS/ESP8266_blink/: CMakeLists.txt
ESP32_PROJECTS/ESP8266_blink/src/: blink.cpp
ESP32_PROJECTS/blink/: sdkconfig
ESP32_PROJECTS/hello_world/: .start.sh.kate-swp  CMakeLists.txt  export.sh  start.sh
ESP32_PROJECTS/scan/: sdkconfig.old  start.sh
ESP32_PROJECTS/simple_sniffer/: sdkconfig  start.sh
